# NytiaLab

./: .gitignore  .pre-commit-config.yaml  DECISIONS.md  README.md  docker-compose.yml  main.py  pyproject.toml  sc
alembic/: env.py
alembic/versions/: 3adc8f74c2ea_initial_schema.py
app/: config.py  database.py  main.py
app/models/: __init__.py  employee.py  health_record.py  product.py  product_tag.py  recommendation.py
app/repositories/: __init__.py  employee_repo.py  product_repo.py
app/routers/: __init__.py  employees.py  health.py  products.py  recommendations.py
app/schemas/: __init__.py  employee.py  health_record.py  product.py  recommendation.py
app/services/: __init__.py  employee_service.py  product_service.py  recommender.py  scoring.py
scripts/: seed_data.py
